# advent-of-code-2025

./: .gitignore  Cargo.toml
lib-advent-macro/: Cargo.toml
lib-advent-macro/src/: lib.rs
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  util.rs
